--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="down-cv">
+                    <button class="btn-primary">Download CV</button>
+                </div>
         </section>
     </Main>
 
