--- a/index.html
+++ b/index.html
@@ -207,7 +207,27 @@
     </Main>
 
     <footer>
-
+        <div class="footer-column">
+            <h3 class="section-tittle">Lets Connect </h3>
+            <p class="section-description">
+                Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8.00 P.M ET, Monday through Friday.
+            </p>
+            <div class="social-link">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-tittle">Let’s Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="text" name="" placeholder="Your Email" id="">
+                <textarea name="" placeholder="message" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
